@@ -1022,9 +1022,19 @@ public class RealProject implements IProject {
                         }
 
                         @Override
-                        public void rebaseAndSave(File out) throws Exception {
-                            mergeTMX(baseTMX, headTMX, commitDetails);
-                            projectTMX.exportTMX(config, out, false, false, true);
+                        public void rebaseAndSave(File tempOut) throws Exception {
+                            // Rebase-merge and immediately save mergedTMX
+                            // to tempOut.
+                            // It shall not save it as the projectTMX here.
+                            ProjectTMX mergedTMX = mergeTMX(baseTMX, headTMX, commitDetails);
+                            mergedTMX.exportTMX(config, tempOut, false, false, true);
+                        }
+
+                        @Override
+                        public void reload(File file) throws Exception {
+                            ProjectTMX newTMX = new ProjectTMX(config.getSourceLanguage(), config.getTargetLanguage(),
+                                    config.isSentenceSegmentingEnabled(), file, null);
+                            projectTMX.replaceContent(newTMX);
                         }
 
                         @Override
@@ -1037,13 +1047,6 @@ public class RealProject implements IProject {
                             return TMXReader2.detectCharset(file);
                         }
                     });
-            if (projectTMX != null) {
-                // it can be not loaded yet
-                ProjectTMX newTMX = new ProjectTMX(config.getSourceLanguage(), config.getTargetLanguage(),
-                        config.isSentenceSegmentingEnabled(),
-                        new File(config.getProjectInternalDir(), OConsts.STATUS_EXTENSION), null);
-                projectTMX.replaceContent(newTMX);
-            }
         }
 
         if (processGlossary) {
@@ -1096,6 +1099,10 @@ public class RealProject implements IProject {
                             }
 
                             @Override
+                            public void reload(final File file) {
+                            }
+
+                            @Override
                             public String getCommentForCommit() {
                                 final String author = Preferences.getPreferenceDefault(
                                         Preferences.TEAM_AUTHOR, System.getProperty("user.name"));
@@ -1121,7 +1128,8 @@ public class RealProject implements IProject {
      *
      * File 2: headTMX (theirs)
      */
-    protected void mergeTMX(ProjectTMX baseTMX, ProjectTMX headTMX, StringBuilder commitDetails) {
+    protected ProjectTMX mergeTMX(ProjectTMX baseTMX, ProjectTMX headTMX, StringBuilder commitDetails) {
+        ProjectTMX mergedTMX;
         StmProperties props = new StmProperties().setLanguageResource(OStrings.getResourceBundle())
                 .setParentWindow(Core.getMainWindow().getApplicationFrame())
                 // More than this number of conflicts will trigger List View by
@@ -1129,14 +1137,14 @@ public class RealProject implements IProject {
                 .setListViewThreshold(5);
         String srcLang = config.getSourceLanguage().getLanguage();
         String trgLang = config.getTargetLanguage().getLanguage();
-        ProjectTMX mergedTMX = SuperTmxMerge.merge(
+        mergedTMX = SuperTmxMerge.merge(
                 new SyncTMX(baseTMX, OStrings.getString("TMX_MERGE_BASE"), srcLang, trgLang),
                 new SyncTMX(projectTMX, OStrings.getString("TMX_MERGE_MINE"), srcLang, trgLang),
                 new SyncTMX(headTMX, OStrings.getString("TMX_MERGE_THEIRS"), srcLang, trgLang), props);
-        projectTMX.replaceContent(mergedTMX);
         Log.logDebug(LOGGER, "Merge report: {0}", props.getReport());
         commitDetails.append('\n');
         commitDetails.append(props.getReport().toString());
+        return mergedTMX;
     }
 
     /**
